# the-weekly-intelligencer

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.claude/skills/the-week-intelligencer/: SKILL.md
.claude/skills/the-weekly-intelligencer/: SKILL.md
config/: dimensions.yaml
data/: trends.json
issues/: 2026-06-28.html  2026-07-02.html  2026-07-03.html  2026-07-05.html  2026-07-12.html  2026-07-19.html
samples/: 2026-06-26.html
src/intelligencer/: __init__.py  civitai.py  cli.py  config.py  feeds.py  gather.py  images.py  manifest.py  net.py  render.py  sites.py  text.py  trends.py  youtube.py
src/intelligencer/providers/: __init__.py  newsapi.py
src/intelligencer/templates/: intelligencer.css  issue.html.j2
tasks/: plan.md  todo.md
tests/: test_api_newsapi.py  test_civitai.py  test_cli.py  test_config.py  test_e2e_skeleton.py  test_failsoft.py  test_feeds.py  test_gather.py  test_images.py  test_manifest.py  test_render.py  test_sites.py  test_trends.py  test_youtube.py
tests/fixtures/: article_with_og.html  article_without_og.html  config.skeleton.yaml  feed_dated.xml  feed_empty.xml  feed_google_news.xml  feed_many.xml  golden_render.html  manifest.sample.json  sample_feed.xml
