[project]
name = "the-weekly-intelligencer"
version = "0.1.0"
description = "Weekly NYT-style AI-industry digest generator (Claude Code skill)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pillow>=12.3.0",
]

[project.scripts]
intelligencer = "intelligencer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelligencer"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
